--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,13 @@
 + config handler:
   + have a local singleton object and exported function
   + instead of loading, just return from cache
-
++ nicer login process
+  + actually launch browser
+  + run web server to accept redirect
+  + actually compare state token
+  + save access token
+  + close server and exit
+  + close browser window
 = When updating video data:
   + Check if we have edit scope
   + Introduce sub-commands
@@ -12,17 +18,11 @@
   + Check if mine
   - Check if the data has changed
 
+
+= video uploading
+  + Check upload permissions
+  - Find field for file checksum
+  - Upload file
 - Factor out the VES library
 - Unite code with the VES library
-- Find field for file checksum
-- Upload file
-
-
-- nicer login process
-  - actually launch browser
-  - run web server to accept redirect
-  - actually compare state token
-  - save access token
-  - close window
-  - close server and exit
 - Real logout
