Completely separate CLI from the library.
Also improve exception handling patterns.
Release v0.0.5.

--- a/TODO.txt
+++ b/TODO.txt
@@ -41,6 +41,8 @@ x Unite code with the VES library
   + Open in browser
 
 + proper pagination for list
++ Better library / CLI separation
++ Better exception handling patterns
 + delete videos
 - video replacement
   - CLI
